--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,17 +12,16 @@
     "firebase": "^11.6.1",
     "git": "^0.1.5",
     "js-cookie": "^3.0.5",
-    "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "sass": "^1.87.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/react": "19.1.3",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1"
+    "@types/react": "^18.2.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0"
   }
 }
